fix mobile menu z-index

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,5 +1,6 @@
 .mobile-menu {
   position: fixed;
+  z-index: 999;
   width: 100%;
   height: 100%;
   top: 0;
